kube/deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inbox-ms-v2
  labels:
    app: inbox-ms
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inbox-ms
        version: v2
    spec:
      containers:
      - name: inbox-ms
        image: andreleoni/inbox-microservice:latest
        args: ["rails s -p 3001 -b 0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
