kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inbox-ms-v1
  labels:
    app: inbox-ms
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inbox-ms
        version: v1
    spec:
      containers:
      - name: inbox-ms
        image: $$DOCKER_IMAGE
        args: ["rails s -p 3001 -b 0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
