kube/inbox.yaml
apiVersion: v1
kind: Service
metadata:
  name: inbox-ms
  labels:
    app: inbox-ms
    service: inbox-ms
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: inbox-ms
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inbox-ms-v1
  labels:
    app: inbox-ms
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inbox-ms
        version: v1
    spec:
      containers:
      - name: inbox-ms
        image: andreleoni/inbox-microservice:639ea58
        args: ["rails s -p 3001 -b 0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
---
