kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inbox-ms
  labels:
    app: inbox-ms
    service: inbox-ms
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: inbox-ms
