kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: inbox-ms-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 31400
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inbox-ms
spec:
  hosts:
  - "*"
  gateways:
  - inbox-ms-gateway
  http:
  - match:
    - uri:
        exact: /v1/messages
    route:
    - destination:
        host: inbox-ms
        port:
          number: 3001
